remove wiki suffix for custom domains

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -13,7 +13,7 @@ aktpos: true
 alanpedia: true
 algopedia: true
 allbanks2: true
-allthetropeswiki: 'allthetropes.org'
+allthetropes: 'allthetropes.org'
 alwiki: true
 apneuvereniging: true
 applebranch: true
@@ -29,13 +29,13 @@ bgo: true
 biblicalwiki: true
 biblio: true
 bmed: true
-boulderwikiwiki: 'boulderwiki.org'
+boulderwiki: 'boulderwiki.org'
 braindump: true
 brynda1231: true
 bttest: true
 calexit: true
 cancer: true
-carvingwiki: 'carving.wiki'
+carving: 'carving.wiki'
 casuarina: true
 cbmedia: true
 cec: true
@@ -60,16 +60,16 @@ dish: true
 dmw: true
 doin: true
 doraemon: true
-dottorcontewiki: 'wiki.dottorconte.eu'
-drones4allwiki: 'wiki.drones4nature.info'
+dottorconte: 'wiki.dottorconte.eu'
+drones4all: 'wiki.drones4nature.info'
 drunkenpeasantswiki: true
 dts: true
-dwplivewiki: 'wiki.dwplive.com'
+dwplive: 'wiki.dwplive.com'
 easywiki: true
 elainarmua: true
 elements: true
 ernaehrungsrathh: true
-espiralwiki: 'espiral.org'
+espiral: 'espiral.org'
 essway: true
 etpo: true
 eva: true
@@ -122,7 +122,7 @@ lovelivewiki: true
 luckandlogic: true
 lunfeng: true
 maiasongcontest: true
-make717wiki: 'wiki.make717.org'
+make717: 'wiki.make717.org'
 marcoschriek: true
 menufeed: true
 meregos: true
@@ -140,7 +140,7 @@ neuronpedia: true
 newarkmanor: true
 newknowledge: true
 newtrend: true
-nextlevelwikiwiki: 'wiki.lbcomms.co.za'
+nextlevelwiki: 'wiki.lbcomms.co.za'
 nidda23: true
 noalatala: true
 nvc: true
@@ -149,12 +149,12 @@ ofthevampire: true
 oncproject: true
 openconstitution: true
 opengovpioneers: true
-oyeavdelingenwiki: 'oyeavdelingen.org'
+oyeavdelingen: 'oyeavdelingen.org'
 panorama: true
 paodeaoda: true
 partup: true
 pbm: true
-permanentfuturelabwiki: 'permanentfuturelab.wiki'
+permanentfuturelab: 'permanentfuturelab.wiki'
 pflanzen: true
 plasticssongcontest: true
 porp: true
@@ -170,7 +170,7 @@ robloxscripters: true
 rocketleaguequebec: true
 rpcharacters: true
 safiria: true
-savagewikiwiki: 'savage-wiki.com'
+savagewiki: 'savage-wiki.com'
 secondcircle: true
 seldir: true
 seton: true
@@ -183,19 +183,19 @@ sjuhabitat: true
 skyfireflyff: true
 snowthegame: true
 soshomophobie: true
-soundboxwiki: 'www.soundbox.wiki'
+soundbox: 'www.soundbox.wiki'
 southparkfan: true
-spiralwiki: 'spiral.wiki'
+spiral: 'spiral.wiki'
 starsetonline: true
 stellachronica: true
 sthomaspri: true
 studynotekr: true
-takethatwikiwiki: 'takethatwiki.com'
+takethatwiki: 'takethatwiki.com'
 taylor: true
 tcc6640: true
 techeducation: true
 teleswiki: true
-testwiki: 'publictestwiki.com'
+test: 'publictestwiki.com'
 thefosters: true
 thehushhushsaga: true
 theworld: true
@@ -207,9 +207,9 @@ trex: true
 trump: true
 tsponie: true
 unikum: true
-universebuildwiki: 'universebuild.com'
+universebuild: 'universebuild.com'
 urho3d: true
-valentinaprojectwiki: 'wiki.valentinaproject.org'
+valentinaproject: 'wiki.valentinaproject.org'
 videogames: true
 vrgo: true
 wabc: true
@@ -219,10 +219,10 @@ wikibooks: true
 wikicervantes: true
 wikidolphinhansen: true
 wikihoyo: true
-wikikaisagawiki: 'wiki.kaisaga.com'
-wikipucwiki: 'wikipuk.cl'
-wisdomsandboxwiki: 'sandbox.wisdomwiki.org'
-wisdomwiki: 'wisdomwiki.org'
+wikikaisaga: 'wiki.kaisaga.com'
+wikipuc: 'wikipuk.cl'
+wisdomsandbox: 'sandbox.wisdomwiki.org'
+wisdom: 'wisdomwiki.org'
 worldbuilding: true
 wthsapgov: true
 xdjibi: true
