add two new wikis to parsoid

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -28,6 +28,7 @@ betternews: true
 bgo: true
 biblicalwiki: true
 biblio: true
+bigforestwikipedia: true
 bmed: true
 boulderwiki: 'boulderwiki.org'
 braindump: true
@@ -226,6 +227,7 @@ wisdom: 'wisdomwiki.org'
 worldbuilding: true
 wthsapgov: true
 xdjibi: true
+xdwxsty: true
 xjtlu: true
 yacresources: true
 yggdrasilwiki: true
