parsoid on integry

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -99,6 +99,7 @@ hytec: true
 ilearnthings: true
 imsts: true
 inazumaeleven: true
+integry: true
 irc: true
 islamwissenschaft: true
 izanagi: true
