parsoid on attackontitan
required by T1325

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -20,6 +20,7 @@ applebranch: true
 arabudland: true
 aryaman: true
 atheneum: true
+attackontitan: true
 augustinianum: true
 aurcusonline: true
 ayrshire: true
