parsoid on titania for T1332

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -203,6 +203,7 @@ test: 'publictestwiki.com'
 thefosters: true
 thehushhushsaga: true
 theworld: true
+titania: true
 tme: true
 tochki: true
 torejorg: true
