parsoid on vgalimenti for T1343

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -214,6 +214,7 @@ unikum: true
 universebuild: 'universebuild.com'
 urho3d: true
 valentinaproject: 'wiki.valentinaproject.org'
+vgalimenti: true
 videogames: true
 vrgo: true
 wabc: true
