parsoid on tawseela for T1344

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -195,6 +195,7 @@ stellachronica: true
 sthomaspri: true
 studynotekr: true
 takethatwiki: 'takethatwiki.com'
+tawseela: true
 taylor: true
 tcc6640: true
 techeducation: true
