parsoid on medlabiso for T1346

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -127,6 +127,7 @@ lunfeng: true
 maiasongcontest: true
 make717: 'wiki.make717.org'
 marcoschriek: true
+medlabiso: true
 menufeed: true
 meregos: true
 meta: true
