parsoid on pgnwiki for T1367

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -160,6 +160,7 @@ paodeaoda: true
 partup: true
 pbm: true
 permanentfuturelab: 'permanentfuturelab.wiki'
+pgnwiki: true
 pflanzen: true
 plasticssongcontest: true
 porp: true
