add byblopedia to parsoid for VE

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -36,6 +36,7 @@ boulderwiki: 'boulderwiki.org'
 braindump: true
 brynda1231: true
 bttest: true
+byblopedia: true
 calexit: true
 cancer: true
 carving: 'carving.wiki'
