enable parsoid on literature for flow

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -121,6 +121,7 @@ lbsges: true
 lclwiki: true
 lezar224: true
 lingnlang: true
+literature: true
 littlebigplanet: true
 lizard: true
 lovelivewiki: true
