enable parsoid on nomic and bnet for flow

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -32,6 +32,7 @@ biblicalwiki: true
 biblio: true
 bigforestwikipedia: true
 bmed: true
+bnet: true
 boulderwiki: 'boulderwiki.org'
 braindump: true
 brynda1231: true
@@ -151,6 +152,7 @@ newtrend: true
 nextlevelwiki: 'wiki.lbcomms.co.za'
 nidda23: true
 noalatala: true
+nomic: true
 nvc: true
 nwp: true
 ofthevampire: true
