enable parsoid (carelli) ve

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -40,6 +40,7 @@ bttest: true
 byblopedia: true
 calexit: true
 cancer: true
+carelli: true
 carving: 'carving.wiki'
 casuarina: true
 cbmedia: true
