enable parsoid on bettermedia for VE

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -26,6 +26,7 @@ augustinianum: true
 aurcusonline: true
 ayrshire: true
 betapurple: true
+bettermedia: true
 betternews: true
 bgo: true
 biblicalwiki: true
