--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -25,6 +25,7 @@ attackontitan: true
 augustinianum: true
 aurcusonline: true
 ayrshire: true
+bch: true
 betapurple: true
 bettermedia: true
 betternews: true
