--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -32,7 +32,7 @@ betternews: true
 bgo: true
 biblicalwiki: true
 biblio: true
-bigforestwikipedia: true
+bigforest: true
 bmed: true
 bnet: true
 boulderwiki: 'boulderwiki.org'
