add parsoid to fsxworldspain

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -91,6 +91,7 @@ fishpercolator: true
 fmbv: true
 foodsharinghamburg: true
 frontdesks: true
+fsxworldspain: true
 fuse: true
 ganesha: true
 geirpedia: true
