add parsoid to conquestofparadiserp

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -55,6 +55,7 @@ clementsworldbuilding: true
 clicordi: true
 cnv: true
 cogitopedie: true
+conquestofparadiserp: true
 corydoctorow: true
 cssandjsschoolboard: true
 cvsmb: true
