parsoid on aeross per T1470

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -5,6 +5,7 @@
 8station: true
 aacenterpriselearning: true
 adnovum: true
+aeross: true
 aescapes: true
 ageofenlightenment: true
 ageofimperialism: true
