add parsoid to agelonia

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -10,6 +10,7 @@ aescapes: true
 ageofenlightenment: true
 ageofimperialism: true
 ageofimperialists: true
+agelonia: true
 air: true
 aktpos: true
 alanpedia: true
