parsoid on nonbinary per T1478

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -158,6 +158,7 @@ nextlevelwiki: 'wiki.lbcomms.co.za'
 nidda23: true
 noalatala: true
 nomic: true
+nonbinary: true
 nvc: true
 nwp: true
 ofthevampire: true
