--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -240,6 +240,7 @@ wikidolphinhansen: true
 wikihoyo: true
 wikikaisaga: 'wiki.kaisaga.com'
 wikipuc: 'wikipuk.cl'
+wishcertwiki: 'histories.wiki'
 wisdomsandbox: 'sandbox.wisdomwiki.org'
 wisdom: 'wisdomwiki.org'
 worldbuilding: true
