--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -29,7 +29,7 @@ aurcusonline: true
 ayrshire: true
 bch: true
 betapurple: true
-bettermedia: true
+bettermedia: 'bettermedia.info'
 betternews: true
 bgo: true
 biblicalwiki: true
