enable parsoid (revit) VE

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -183,6 +183,7 @@ pso2: true
 purpanrangueilus: true
 qwerty: true
 rawdata: true
+revit: true
 ric: true
 robloxscripters: true
 rocketleaguequebec: true
