enable parsoid (changemy.org) T1515

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -49,6 +49,7 @@ carving: 'carving.wiki'
 casuarina: true
 cbmedia: true
 cec: true
+changemy: 'changemy.org'
 christipedia: true
 ciso: true
 civitas: true
