--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -49,7 +49,7 @@ carving: 'carving.wiki'
 casuarina: true
 cbmedia: true
 cec: true
-changemy: 'changemy.org'
+changemyorg: 'changemy.org'
 christipedia: true
 ciso: true
 civitas: true
