enable parsoid (voting) VE + Flow

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -235,6 +235,7 @@ urho3d: true
 valentinaproject: 'wiki.valentinaproject.org'
 vgalimenti: true
 videogames: true
+voting: true
 vrgo: true
 wabc: true
 walthamstowlabour: true
