add patch153 to parsoid

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -172,6 +172,7 @@ oyeavdelingen: 'oyeavdelingen.org'
 panorama: true
 paodeaoda: true
 partup: true
+patch153: true
 pbm: true
 permanentfuturelab: 'permanentfuturelab.wiki'
 pgnwiki: true
