add icmscholars to parsoid

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -108,6 +108,7 @@ hobbies: true
 hshsinfoportal: true
 hsooden: true
 hytec: true
+icmscholars: true
 ilearnthings: true
 imsts: true
 inazumaeleven: true
