add parsoid to animationmoviewiki

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -18,6 +18,7 @@ algopedia: true
 allbanks2: true
 allthetropes: 'allthetropes.org'
 alwiki: true
+animationmoviewiki: true
 apneuvereniging: true
 applebranch: true
 arabudland: true
