add parsoid for scruffywiki

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -195,6 +195,7 @@ rocketleaguequebec: true
 rpcharacters: true
 safiria: true
 savagewiki: 'savage-wiki.com'
+scruffy: true
 secondcircle: true
 seldir: true
 seton: true
