enable parsoid (mynydd) VE

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -154,6 +154,7 @@ musiclibrary: true
 musictabs: true
 mydegree: true
 mylogic: true
+mynydd: true
 ndn: true
 neuronpedia: true
 newarkmanor: true
