enable parsoid (ourmxfest) VE

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -171,6 +171,7 @@ ofthevampire: true
 oncproject: true
 openconstitution: true
 opengovpioneers: true
+ourmxfest: true
 oyeavdelingen: 'oyeavdelingen.org'
 panorama: true
 paodeaoda: true
