enable parsoid (hktransportpediawiki) ve

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -105,6 +105,7 @@ gze: true
 hamfem: true
 hftqms: true
 hjelpemidler: true
+hktransportpedia: true
 hobbies: true
 hshsinfoportal: true
 hsooden: true
