enable parsoid (tymyrddin) ve

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -238,6 +238,7 @@ trablang: true
 trex: true
 trump: true
 tsponie: true
+tymyrddin: true
 unikum: true
 universebuild: 'universebuild.com'
 urho3d: true
