enable parsoid (chimaera) ve

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -51,6 +51,7 @@ casuarina: true
 cbmedia: true
 cec: true
 changemyorg: 'changemy.org'
+chimaera: true
 christipedia: true
 ciso: true
 civitas: true
