enable parsoid (yeoksa.wiki) ve and flow

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -267,6 +267,7 @@ xdjibi: true
 xdwxsty: true
 xjtlu: true
 yacresources: true
+yeoksa.wiki: true
 yggdrasilwiki: true
 ylsc: true
 yourosongcontest: true
