--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -267,7 +267,7 @@ xdjibi: true
 xdwxsty: true
 xjtlu: true
 yacresources: true
-yeoksa.wiki: true
+yeoksawiki: 'yeoksa.wiki'
 yggdrasilwiki: true
 ylsc: true
 yourosongcontest: true
