enable parsoid on karmazynxyz

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -123,6 +123,7 @@ jakepers: true
 janesskillspack: true
 jayuwiki: true
 justinbieber: true
+karmazynxyz: true
 karniaruthenia: true
 kassai: true
 kinderacic: true
