enable parsoid on music

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -154,6 +154,7 @@ miningpromies: true
 modular: true
 mozi: true
 muckhack: true
+music: true
 musicarchive: true
 musiclibrary: true
 musictabs: true
