--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -129,7 +129,7 @@ kassai: true
 kinderacic: true
 korach: true
 krebs: true
-kstartups: true
+kstartups: 'wiki.besuccess.com'
 kwiki: true
 lancemedical: true
 lbsges: true
