enable parsoid (aidorupedia) ve

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -11,6 +11,7 @@ ageofenlightenment: true
 ageofimperialism: true
 ageofimperialists: true
 agelonia: true
+aidorupedia: true
 air: true
 aktpos: true
 alanpedia: true
