--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -146,6 +146,7 @@ lunfeng: true
 maiasongcontest: true
 make717: 'wiki.make717.org'
 marcoschriek: true
+medergists: true
 medlabiso: true
 menufeed: true
 meregos: true
