--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -61,6 +61,7 @@ clicordi: true
 cnv: true
 cogitopedie: true
 conquestofparadiserp: true
+coldblooded: true
 corydoctorow: true
 cssandjsschoolboard: true
 cvsmb: true
