--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -61,7 +61,7 @@ clicordi: true
 cnv: true
 cogitopedie: true
 conquestofparadiserp: true
-coldblooded: true
+coldblooded: 'wiki.coldblooded.ga'
 corydoctorow: true
 cssandjsschoolboard: true
 cvsmb: true
