custom domain not active yet

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -61,7 +61,7 @@ clicordi: true
 cnv: true
 cogitopedie: true
 conquestofparadiserp: true
-coldblooded: 'wiki.coldblooded.ga'
+coldblooded: true
 corydoctorow: true
 cssandjsschoolboard: true
 cvsmb: true
