add "politics" to parsoid

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -189,6 +189,7 @@ permanentfuturelab: 'permanentfuturelab.wiki'
 pgnwiki: true
 pflanzen: true
 plasticssongcontest: true
+politics: true
 porp: true
 pq: true
 prfmuk: true
