--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -251,6 +251,7 @@ universebuild: 'universebuild.com'
 urho3d: true
 valentinaproject: 'wiki.valentinaproject.org'
 vgalimenti: true
+victorianrp: true
 videogames: true
 voting: true
 vrgo: true
