add "wikinicus" to parsoid

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -263,6 +263,7 @@ wikicervantes: true
 wikidolphinhansen: true
 wikihoyo: true
 wikikaisaga: 'wiki.kaisaga.com'
+wikinicus: true
 wikipuc: 'wikipuk.cl'
 wishcertwiki: 'histories.wiki'
 wisdomsandbox: 'sandbox.wisdomwiki.org'
