add "knowledge" to parsoid

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -129,6 +129,7 @@ karmazynxyz: true
 karniaruthenia: true
 kassai: true
 kinderacic: true
+knowledge: true
 korach: true
 krebs: true
 kstartups: 'wiki.besuccess.com'
