add "easter" to parsoid

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -80,6 +80,7 @@ drones4all: 'wiki.drones4nature.info'
 drunkenpeasantswiki: true
 dts: true
 dwplive: 'wiki.dwplive.com'
+easter: true
 easywiki: true
 elements: true
 ernaehrungsrathh: true
