enable parsoid (neuromotor) ve

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -168,6 +168,7 @@ mydegree: true
 mylogic: true
 mynydd: true
 ndn: true
+neuromotor: true
 neuronpedia: true
 newarkmanor: true
 newknowledge: true
