add "breedersofthenephelym" to parsoid

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -41,6 +41,7 @@ bmed: true
 bnet: true
 boulderwiki: 'boulderwiki.org'
 braindump: true
+breedersofthenephelym: true
 brynda1231: true
 bttest: true
 byblopedia: true
