Enable Parsoid for VisualEditor on uoluwiki

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -255,6 +255,7 @@ tsponie: true
 tymyrddin: true
 unikum: true
 universebuild: 'universebuild.com'
+uolu: true
 urho3d: true
 valentinaproject: 'wiki.valentinaproject.org'
 vgalimenti: true
