--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -150,6 +150,7 @@ lovelivewiki: true
 luckandlogic: true
 lunfeng: true
 maiasongcontest: true
+malaysia: true
 make717: 'wiki.make717.org'
 marcoschriek: true
 medergists: true
