add freeandopen to parsoid

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -97,6 +97,7 @@ fbwiki: true
 fishpercolator: true
 fmbv: true
 foodsharinghamburg: true
+freeandopen: true
 frontdesks: true
 fsxworldspain: true
 fuse: true
