--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -98,6 +98,7 @@ fbwiki: true
 fishpercolator: true
 fmbv: true
 foodsharinghamburg: true
+freeandopen: true
 freestateofjones: true
 frontdesks: true
 fsxworldspain: true
