Parsoid for VisualEditor

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -255,6 +255,7 @@ trablang: true
 trex: true
 trump: true
 tsponie: true
+tws: true
 tymyrddin: true
 unikum: true
 universebuild: 'universebuild.com'
