add "westmarches" to parsoid

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -270,6 +270,7 @@ vrgo: true
 wabc: true
 walthamstowlabour: true
 webflow: true
+westmarches: true
 wikibooks: true
 wikicervantes: true
 wikidolphinhansen: true
