Enable parsoid for VE on hlptestwiki per T1710

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -113,6 +113,7 @@ hamfem: true
 hftqms: true
 hjelpemidler: true
 hktransportpedia: true
+hlptest: true
 hobbies: true
 hshsinfoportal: true
 hsooden: true
