Enable Parsoid for VE on nanatsunotaizaiwiki per T1716

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -171,6 +171,7 @@ musictabs: true
 mydegree: true
 mylogic: true
 mynydd: true
+nanatsunotaizai: true
 nationstates: true
 ndn: true
 neuromotor: true
