Enable Parsoid for VE on artificercreationswiki per T1723

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -23,6 +23,7 @@ animationmoviewiki: true
 apneuvereniging: true
 applebranch: true
 arabudland: true
+artificercreations: true
 aryaman: true
 atheneum: true
 attackontitan: true
