Enable Parsoid for VE on thecscwiki per T1735

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -245,6 +245,7 @@ tcc6640: true
 techeducation: true
 teleswiki: true
 test: 'publictestwiki.com'
+thecsc: true
 thefosters: true
 thehushhushsaga: true
 theworld: true
