VE on overon per T1748

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -192,6 +192,7 @@ oncproject: true
 openconstitution: true
 opengovpioneers: true
 ourmxfest: true
+overon: true
 oyeavdelingen: 'oyeavdelingen.org'
 panorama: true
 paodeaoda: true
