add parsoid for nationsglorywiki

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -173,6 +173,7 @@ mydegree: true
 mylogic: true
 mynydd: true
 nanatsunotaizai: true
+nationsglory: true
 nationstates: true
 ndn: true
 neuromotor: true
