enable parsoid on "wikiescola"

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -280,6 +280,7 @@ westmarches: true
 wikibooks: true
 wikicervantes: true
 wikidolphinhansen: true
+wikiescola: true
 wikihoyo: true
 wikikaisaga: 'wiki.kaisaga.com'
 wikinicus: true
