--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -278,6 +278,7 @@ walthamstowlabour: true
 webflow: true
 westmarches: true
 wikibooks: true
+wikicanada: true
 wikicervantes: true
 wikidolphinhansen: true
 wikiescola: true
