Enable Parsoid on "PruebaWiki"
Addition of Parsoid on Spanish PublicTestWiki.

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -209,6 +209,7 @@ porp: true
 pq: true
 prfmuk: true
 priyo: true
+prueba: 'es.publictestwiki.com'
 pso2: true
 purpanrangueilus: true
 qwerty: true
