enable parsoid (rootsandlimbs) ve

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -218,6 +218,7 @@ revit: true
 ric: true
 robloxscripters: true
 rocketleaguequebec: true
+rootsandlimbs: true
 rpcharacters: true
 safiria: true
 savagewiki: 'savage-wiki.com'
