Enable parsoid for raymanspeedrun

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -214,6 +214,7 @@ pso2: true
 purpanrangueilus: true
 qwerty: true
 rawdata: true
+raymanspeedrun: true
 revit: true
 ric: true
 robloxscripters: true
