parsoid on koza per T1800

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -138,6 +138,7 @@ kassai: true
 kinderacic: true
 knowledge: true
 korach: true
+koza: true
 krebs: true
 kstartups: 'wiki.besuccess.com'
 kwiki: true
