--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -153,6 +153,7 @@ lizard: true
 lovelivewiki: true
 luckandlogic: true
 lunfeng: true
+magez: true
 maiasongcontest: true
 malaysia: true
 make717: 'wiki.make717.org'
