VE on bpawiki per T1795

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -41,6 +41,7 @@ bisk: true
 bmed: true
 bnet: true
 boulderwiki: 'boulderwiki.org'
+bpa: true
 braindump: true
 breedersofthenephelym: true
 brynda1231: true
