add parsoid to "nenawiki"

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -179,6 +179,7 @@ nanatsunotaizai: true
 nationsglory: true
 nationstates: true
 ndn: true
+nenawiki: true
 neuromotor: true
 neuronpedia: true
 newarkmanor: true
