enable parsoid (lapolitics) ve

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -144,6 +144,7 @@ krebs: true
 kstartups: 'wiki.besuccess.com'
 kwiki: true
 lancemedical: true
+lapolitics: true
 lbsges: true
 lclwiki: true
 lezar224: true
