Addition of "alternatehistorywiki"
Addition of "alternatehistorywiki" for Enable VisualEditor (T1817).

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -18,6 +18,7 @@ alanpedia: true
 algopedia: true
 allbanks2: true
 allthetropes: 'allthetropes.org'
+alternatehistory: true
 alwiki: true
 animationmoviewiki: true
 apneuvereniging: true
