add nenawiki custom domain

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -176,7 +176,7 @@ nanatsunotaizai: true
 nationsglory: true
 nationstates: true
 ndn: true
-nenawiki: true
+nenawiki: 'nenawiki.org'
 neuromotor: true
 neuronpedia: true
 newarkmanor: true
