add parsoid for historiaalternativa per request T1840

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -112,6 +112,7 @@ grandtheftauto: true
 gze: true
 hamfem: true
 hftqms: true
+historiaalternativa: true
 hjelpemidler: true
 hktransportpedia: true
 hlptest: true
