Addition of "kevinincwiki" and "mikrodevdocswiki" for T1878 and T1879
Addition of "kevinincwiki" and "mikrodevdocswiki" for Enable VisualEditor.

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -135,6 +135,7 @@ justinbieber: true
 karmazynxyz: true
 karniaruthenia: true
 kassai: true
+kevininc: true
 kinderacic: true
 knowledge: true
 korach: true
@@ -164,6 +165,7 @@ menufeed: true
 meregos: true
 meta: true
 mikrodev: true
+mikrodevdocs: true
 miningpromies: true
 modular: true
 mozi: true
