--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -205,6 +205,7 @@ partup: true
 patch153: true
 pbm: true
 permanentfuturelab: 'permanentfuturelab.wiki'
+pfsolutions: true
 pgnwiki: true
 plasticssongcontest: true
 politics: true
