enable parsoid on "tekken"

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -248,6 +248,7 @@ takethatwiki: 'takethatwiki.com'
 tawseela: true
 tcc6640: true
 techeducation: true
+tekken: true
 teleswiki: true
 test: 'publictestwiki.com'
 thecsc: true
