add "isv" to parsoid
blocker for mw-config PR

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -127,6 +127,7 @@ inazumaeleven: true
 integry: true
 irc: true
 islamwissenschaft: true
+isv: true
 izanagi: true
 jakepers: true
 janesskillspack: true
