enable parsoid on "oolawiki"

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -195,6 +195,7 @@ nwp: true
 nxwiki: true
 ofthevampire: true
 oncproject: true
+oolawiki: true
 openconstitution: true
 opengovpioneers: true
 ourmxfest: true
