--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -137,6 +137,7 @@ karmazynxyz: true
 karniaruthenia: true
 kassai: true
 kevininc: true
+kgb: true
 kinderacic: true
 knowledge: true
 korach: true
