add wish per T1955

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -294,6 +294,7 @@ wikipuc: 'wikipuk.cl'
 wishcertwiki: 'histories.wiki'
 wisdomsandbox: 'sandbox.wisdomwiki.org'
 wisdom: 'wisdomwiki.org'
+wish: true
 worldbuilding: true
 wthsapgov: true
 xdjibi: true
