add parsoid for rwdvolvo per request T1956

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -227,6 +227,7 @@ roberts: true
 rocketleaguequebec: true
 rootsandlimbs: true
 rpcharacters: true
+rwdvolvo: true
 safiria: true
 savagewiki: 'savage-wiki.com'
 scruffy: true
