add parsoid for saharinspace per request T1959

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -229,6 +229,7 @@ rootsandlimbs: true
 rpcharacters: true
 rwdvolvo: true
 safiria: true
+saharinspace: true
 savagewiki: 'savage-wiki.com'
 scruffy: true
 seldir: true
