add "marinebiodiversitymatrix.org" to parsoid

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -161,6 +161,7 @@ maiasongcontest: true
 malaysia: true
 make717: 'wiki.make717.org'
 marcoschriek: true
+marinebiodiversitymatrix: 'marinebiodiversitymatrix.org'
 medergists: true
 medlabiso: true
 menufeed: true
