add thebb per T1958

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -257,6 +257,7 @@ techeducation: true
 tekken: true
 teleswiki: true
 test: 'publictestwiki.com'
+thebb: true
 thecsc: true
 thefosters: true
 thehushhushsaga: true
