--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -157,7 +157,7 @@ lovelivewiki: true
 luckandlogic: true
 lunfeng: true
 magez: true
-magnaversewiki: true
+magnaverse: true
 maiasongcontest: true
 malaysia: true
 make717: 'wiki.make717.org'
