add parsoid for brxd per request T2008

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -46,6 +46,7 @@ braindump: true
 breedersofthenephelym: true
 brynda1231: true
 bttest: true
+brxd: true
 byblopedia: true
 calexit: true
 cancer: true
