add parsoid per request T2034

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -282,6 +282,7 @@ tymyrddin: true
 unikum: true
 universebuild: 'universebuild.com'
 uolu: true
+usse: true
 valentinaproject: 'wiki.valentinaproject.org'
 vgalimenti: true
 victorianrp: true
