--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -54,6 +54,7 @@ carelli: true
 carving: 'carving.wiki'
 casuarina: true
 cec: true
+cccp: true
 changemyorg: 'changemy.org'
 chimaera: true
 christipedia: true
