add rs to parsoid

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -233,6 +233,7 @@ roberts: true
 rocketleaguequebec: true
 rootsandlimbs: true
 rpcharacters: true
+rs: true
 rwdvolvo: true
 safiria: true
 saharinspace: true
