enable parsoid on test1

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -263,6 +263,7 @@ techeducation: true
 tekken: true
 teleswiki: true
 test: 'publictestwiki.com'
+test1: true
 thebb: true
 thecsc: true
 thefosters: true
