Add wustlnsgywiki to parsoid for VE per T2086

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -311,6 +311,7 @@ wisdom: 'wisdomwiki.org'
 wish: true
 worldbuilding: true
 wthsapgov: true
+wustlnsgy: true
 xdjibi: true
 xdwxsty: true
 xjtlu: true
