Enabling parsoid for feuwiki in conjunction with VE request
Enabling parsoid for feu.miraheze.org per request T2094.

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -97,6 +97,7 @@ extload: true
 fablabesds: true
 fantasia: true
 fbwiki: true
+feu: true
 fishpercolator: true
 fmbv: true
 foodsharinghamburg: true
