add "gameon" to parsoid

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -106,6 +106,7 @@ freestateofjones: true
 frontdesks: true
 fsxworldspain: true
 fuse: true
+gameon: true
 ganesha: true
 geirpedia: true
 geresbamyan: true
