Add cdcwiki per T2122

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -53,6 +53,7 @@ cancer: true
 carelli: true
 carving: 'carving.wiki'
 casuarina: true
+cdc: true
 cec: true
 cccp: true
 changemyorg: 'changemy.org'
