add "serinfhosp" to parsoid

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -248,6 +248,7 @@ savagewiki: 'savage-wiki.com'
 scruffy: true
 seldir: true
 seton: true
+serinfhosp: true
 shippingandmeta: true
 sidem: true
 simonjon: true
