--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -192,7 +192,7 @@ n2go: true
 nanatsunotaizai: true
 nationsglory: true
 nationstates: true
-ndn: true
+nd: true
 nenawiki: 'nenawiki.org'
 neuromotor: true
 neuronpedia: true
