Parsoid on spritopiawiki (T2160)

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -261,6 +261,7 @@ soshomophobie: true
 soundbox: 'www.soundbox.wiki'
 southparkfan: true
 spiral: 'spiral.wiki'
+spritopia: true
 starsetonline: true
 stellachronica: true
 sthomaspri: true
