Add parsoid for csnimsbordeaux per request T2163

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -68,6 +68,7 @@ cogitopedie: true
 conquestofparadiserp: true
 coldblooded: true
 corydoctorow: true
+csnimsbordeaux: true
 cssandjsschoolboard: true
 cvsmb: true
 cybersecurity: true
