--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -22,7 +22,7 @@ alternatehistory: true
 alwiki: true
 animationmoviewiki: true
 apneuvereniging: true
-applebranch: true
+macfan4000: true
 arabudland: true
 artificercreations: true
 aryaman: true
