add parsoid for infectoped per request T2164

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -134,6 +134,7 @@ icmscholars: true
 ilearnthings: true
 imsts: true
 inazumaeleven: true
+infectoped: true
 integry: true
 irc: true
 islamwissenschaft: true
