--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -22,7 +22,6 @@ alternatehistory: true
 alwiki: true
 animationmoviewiki: true
 apneuvereniging: true
-applebranch: true
 arabudland: true
 artificercreations: true
 aryaman: true
@@ -168,6 +167,7 @@ lizard: true
 lovelivewiki: true
 luckandlogic: true
 lunfeng: true
+macfan4000: true
 magez: true
 magnaverse: true
 maiasongcontest: true
