T2187: Parsoid for VE config for hellointernetwiki

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -120,6 +120,7 @@ grdarchive: true
 gtnh: true
 gze: true
 hamfem: true
+hellointernet: true
 hftqms: true
 historiaalternativa: true
 hjelpemidler: true
