change feu to custom domain

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -99,7 +99,7 @@ eyebobs: true
 fablabesds: true
 fantasia: true
 fbwiki: true
-feu: true
+feu: 'froggy.info'
 fishpercolator: true
 fmbv: true
 foodsharinghamburg: true
