Parsoid on showmedicinawiki (T2198)

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -254,6 +254,7 @@ seldir: true
 seton: true
 serinfhosp: true
 shippingandmeta: true
+showmedicina: true
 sidem: true
 simonjon: true
 sirikot: true
