add "clonedeploy" to parsoid

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -62,6 +62,7 @@ ciso: true
 civitas: true
 clementsworldbuilding: true
 clicordi: true
+clonedeploy: true
 cnv: true
 cogitopedie: true
 conquestofparadiserp: true
