T2230: parsoid for lfwiki

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -162,6 +162,7 @@ lancemedical: true
 lapolitics: true
 lbsges: true
 lezar224: true
+lfwiki: true
 lingnlang: true
 literature: true
 littlebigplanet: true
