--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -86,6 +86,7 @@ drones4all: 'wiki.drones4nature.info'
 drunkenpeasantswiki: true
 dts: true
 dwplive: 'wiki.dwplive.com'
+earthian: true
 easter: true
 easywiki: true
 elements: true
