parsoid on generalistprogram per T2224

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -113,8 +113,9 @@ fuse: true
 gameon: true
 ganesha: true
 geirpedia: true
-geresbamyan: true
 gen: true
+generalistprogram: true
+geresbamyan: true
 gnc: true
 grandtheftwiki: true
 grandtheftauto: true
