--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -115,6 +115,7 @@ ganesha: true
 geirpedia: true
 geresbamyan: true
 gen: true
+generalistprogram: true
 gnc: true
 grandtheftwiki: true
 grandtheftauto: true
