Parsoid on appswiki per T2242

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -22,6 +22,7 @@ alternatehistory: true
 alwiki: true
 animationmoviewiki: true
 apneuvereniging: true
+apps: true
 arabudland: true
 artificercreations: true
 aryaman: true
