T2253: enable Parsoid for seawiki

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -257,6 +257,7 @@ safiria: true
 saharinspace: true
 savagewiki: 'savage-wiki.com'
 scruffy: true
+sea: true
 seldir: true
 seton: true
 serinfhosp: true
