--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -116,6 +116,7 @@ ganesha: true
 geirpedia: true
 gen: true
 generalistprogram: true
+gepacobiodiv: true
 geresbamyan: true
 gnc: true
 grandtheftwiki: true
