uno for ve per T2261

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -299,6 +299,7 @@ tws: true
 tymyrddin: true
 unikum: true
 universebuild: 'universebuild.com'
+uno: true
 uolu: true
 usse: true
 valentinaproject: 'wiki.valentinaproject.org'
