add parsoid to "bunker401"

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -47,6 +47,7 @@ breedersofthenephelym: true
 brynda1231: true
 bttest: true
 brxd: true
+bunker401: true
 byblopedia: true
 calexit: true
 cancer: true
