add "ellersliedemo" to parsoid

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -91,7 +91,7 @@ dwplive: 'wiki.dwplive.com'
 earthian: true
 easter: true
 easywiki: true
-elements: true
+ellersliedemo: true
 ernaehrungsrathh: true
 espiral: 'espiral.org'
 essway: true
