Parsoid on inebriationconfederationwiki per T2298

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -140,6 +140,7 @@ icmscholars: true
 ilearnthings: true
 imsts: true
 inazumaeleven: true
+inebriationconfederation: true
 infectoped: true
 integry: true
 irc: true
