add "peopleshararam" to parsoid

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -230,6 +230,7 @@ panorama: true
 paodeaoda: true
 partup: true
 patch153: true
+peopleshararam: true
 permanentfuturelab: 'permanentfuturelab.wiki'
 petctviewer: true
 pfsolutions: true
