Adding parsoid for puzzle.miraheze.org
Per request T2316.

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -242,6 +242,7 @@ prfmuk: true
 priyo: true
 prueba: 'es.publictestwiki.com'
 pso2: true
+puzzle: true
 qwerty: true
 rawdata: true
 raymanspeedrun: true
