--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -228,7 +228,7 @@ overon: true
 oyeavdelingen: 'oyeavdelingen.org'
 panorama: true
 paodeaoda: true
-partup: true
+r2: true
 patch153: true
 peopleshararam: true
 permanentfuturelab: 'permanentfuturelab.wiki'
