--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -29,6 +29,7 @@ aryaman: true
 atheneum: true
 attackontitan: true
 ayrshire: true
+ayurbooks: true
 bch: true
 betapurple: true
 bettermedia: 'bettermedia.info'
