Adding VE to medicina.miraheze.org
Per request T2372

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -185,6 +185,7 @@ make717: 'wiki.make717.org'
 marcoschriek: true
 marinebiodiversitymatrix: 'marinebiodiversitymatrix.org'
 medergists: true
+medicina: true
 medlabiso: true
 menufeed: true
 meregos: true
