add edmund on parsoid per request T2377

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -92,6 +92,7 @@ dwplive: 'wiki.dwplive.com'
 earthian: true
 easter: true
 easywiki: true
+edmund: true
 ellersliedemo: true
 ernaehrungsrathh: true
 espiral: 'espiral.org'
