parsoid on novayawiki per T2387

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -216,6 +216,7 @@ nextlevelwiki: 'wiki.lbcomms.co.za'
 noalatala: true
 nomic: true
 nonbinary: true
+novaya: true
 nvc: true
 nwp: true
 nxwiki: true
