--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -315,6 +315,7 @@ uolu: true
 usse: true
 valentinaproject: 'wiki.valentinaproject.org'
 vgalimenti: true
+vicproject: true
 victorianrp: true
 videogames: true
 voting: true
