--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -194,6 +194,7 @@ meta: true
 mikrodev: true
 mikrodevdocs: true
 miningpromies: true
+modelshipreference: true
 modular: true
 mozi: true
 muckhack: true
