enable parsoid (jcs) VE

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -152,6 +152,7 @@ iwn: true
 izanagi: true
 janesskillspack: true
 jayuwiki: true
+jcs: true
 justinbieber: true
 karmazynxyz: true
 karniaruthenia: true
