--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -250,6 +250,7 @@ priyo: true
 prueba: 'es.publictestwiki.com'
 pso2: true
 puzzle: true
+pythia: true
 qwerty: true
 rawdata: true
 raymanspeedrun: true
