add parsoid for innovwikiproto per request T2462

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -143,6 +143,7 @@ ilearnthings: true
 imsts: true
 inazumaeleven: true
 inebriationconfederation: true
+innovwikiproto: true
 infectoped: true
 integry: true
 irc: true
