enable parsoid (ubrwiki) ve

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -312,6 +312,7 @@ trwc: true
 tsponie: true
 tws: true
 tymyrddin: true
+ubrwiki: true
 unikum: true
 unionnorteamericana: true
 universebuild: 'universebuild.com'
