enable parsoid (maccnyc) ve

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -179,6 +179,7 @@ lizard: true
 lovelivewiki: true
 luckandlogic: true
 lunfeng: true
+maccnyc: true
 macfan4000: true
 magez: true
 magnaverse: true
