Adding parsoid to viagroupia wiki
Per request T2477

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -323,6 +323,7 @@ uolu: true
 usse: true
 valentinaproject: 'wiki.valentinaproject.org'
 vgalimenti: true
+viagroupiawiki: true
 vicproject: true
 victorianrp: true
 videogames: true
