remove the wiki prefix on viagroupia for the request T2477

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -323,7 +323,7 @@ uolu: true
 usse: true
 valentinaproject: 'wiki.valentinaproject.org'
 vgalimenti: true
-viagroupiawiki: true
+viagroupia: true
 vicproject: true
 victorianrp: true
 videogames: true
