change oecumene.wiki to oecumene.org

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -225,7 +225,7 @@ nvc: true
 nwp: true
 nxwiki: true
 nychousingwiki: true
-oecumene: 'oecumene.wiki'
+oecumene: 'oecumene.org'
 ofthevampire: true
 oncproject: true
 oolawiki: true
