Adding Parsoid to mikeandchrisproductionswiki
Per request T2489

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -194,6 +194,7 @@ medlabiso: true
 menufeed: true
 meregos: true
 meta: true
+mikeandchrisproductions: true
 mikrodev: true
 mikrodevdocs: true
 miningpromies: true
