enable parsoid on testarkcls

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -294,6 +294,7 @@ techeducation: true
 tekken: true
 teleswiki: true
 test: 'publictestwiki.com'
+testarkcls: true
 test1: true
 thebb: true
 thecsc: true
