Parsoid on 2 wikis per T2491 and T2514

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -96,6 +96,7 @@ easter: true
 easywiki: true
 edmund: true
 ellersliedemo: true
+embersghostsquad: true
 ernaehrungsrathh: true
 espiral: 'espiral.org'
 essway: true
@@ -266,6 +267,7 @@ rwdvolvo: true
 safiria: true
 saharinspace: true
 savagewiki: 'savage-wiki.com'
+schicksalswiki: true
 scruffy: true
 sdiy: true
 sea: true
