jcs custom domain

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -154,7 +154,7 @@ iwn: true
 izanagi: true
 janesskillspack: true
 jayuwiki: true
-jcs: true
+jcs: 'wiki.gesamtschule-nordkirchen.de'
 justinbieber: true
 karmazynxyz: true
 karniaruthenia: true
