add parsoid for zendari and generationsbamoro per request T2515 and T2521

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -121,6 +121,7 @@ ganesha: true
 geirpedia: true
 gen: true
 generalistprogram: true
+generationsbamoro: true
 gepacobiodiv: true
 geresbamyan: true
 gnc: true
@@ -361,5 +362,6 @@ yggdrasilwiki: true
 ylsc: true
 yourosongcontest: true
 youtube: true
+zendari: true
 zitabites: true
 zharkunu: true
