--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -188,6 +188,7 @@ magnaverse: true
 maiasongcontest: true
 malaysia: true
 make717: 'wiki.make717.org'
+maktaba: 'en.maktaba.co.in'
 marcoschriek: true
 marinebiodiversitymatrix: 'marinebiodiversitymatrix.org'
 medergists: true
