add songcontests on parsoid for request T2532

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -281,6 +281,7 @@ sidem: true
 simonjon: true
 sirikot: true
 snowthegame: true
+songcontests: true
 soshomophobie: true
 soundbox: 'www.soundbox.wiki'
 southparkfan: true
