custom domain not miraheze

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -223,7 +223,7 @@ newtrend: true
 nextlevelwiki: 'wiki.lbcomms.co.za'
 noalatala: true
 nomic: true
-nonbinary: true
+nonbinary: 'nonbinary.wiki'
 novaya: true
 nvc: true
 nwp: true
