add "marioserieswiki" to parsoid

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -191,6 +191,7 @@ make717: 'wiki.make717.org'
 maktaba: 'en.maktaba.co.in'
 marcoschriek: true
 marinebiodiversitymatrix: 'marinebiodiversitymatrix.org'
+marioserieswiki: true
 medergists: true
 medicina: true
 medlabiso: true
