add "kbrproject" to parsoid

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -160,6 +160,7 @@ justinbieber: true
 karmazynxyz: true
 karniaruthenia: true
 kassai: true
+kbrproject: true
 kevininc: true
 kgb: true
 kinderacic: true
