Add cristianopedia to parsoid as per task 2557

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -73,6 +73,7 @@ cogitopedie: true
 conquestofparadiserp: true
 coldblooded: true
 corydoctorow: true
+cristianopedia: true
 csnimsbordeaux: true
 cssandjsschoolboard: true
 cvsmb: true
