add "fikcyjnatv" to parsoid

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -109,6 +109,7 @@ fablabesds: true
 fantasia: true
 fbwiki: true
 feu: 'froggy.info'
+fikcyjnatv: true
 fishpercolator: true
 fmbv: true
 foodsharinghamburg: true
