add "ipoly" to parsoid

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -150,6 +150,7 @@ inebriationconfederation: true
 innovwikiproto: true
 infectoped: true
 integry: true
+ipoly: true
 irc: true
 islamwissenschaft: true
 isv: true
