--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -30,6 +30,7 @@ atheneum: true
 attackontitan: true
 ayrshire: true
 ayurbooks: true
+balcanopediascharlatanica: true
 bch: true
 betapurple: true
 bettermedia: 'bettermedia.info'
