add "eerstelijnszones" to parsoid

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -97,6 +97,7 @@ earthian: true
 easter: true
 easywiki: true
 edmund: true
+eerstelijnszones: true
 ellersliedemo: true
 ernaehrungsrathh: true
 espiral: 'espiral.org'
