add "healthvector" to parsoid

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -135,6 +135,7 @@ grdarchive: true
 gtnh: true
 gze: true
 hamfem: true
+healthvector: true
 hftqms: true
 historiaalternativa: true
 hjelpemidler: true
