--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -117,6 +117,7 @@ fmbv: true
 foodsharinghamburg: true
 freeandopen: true
 freestateofjones: true
+ferahistoria: true
 frontdesks: true
 fsxworldspain: true
 fuse: true
@@ -163,6 +164,7 @@ janesskillspack: true
 jayuwiki: true
 jcs: 'wiki.gesamtschule-nordkirchen.de'
 justinbieber: true
+kai: true
 karmazynxyz: true
 karniaruthenia: true
 kassai: true
@@ -243,6 +245,7 @@ oncproject: true
 oolawiki: true
 openconstitution: true
 opengovpioneers: true
+opmi: true
 ourmxfest: true
 overon: true
 oyeavdelingen: 'oyeavdelingen.org'
