missing www. on alwiki.net

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -19,7 +19,7 @@ algopedia: true
 allbanks2: true
 allthetropes: 'allthetropes.org'
 alternatehistory: true
-alwiki: 'alwiki.net'
+alwiki: 'www.alwiki.net'
 animationmoviewiki: true
 apneuvereniging: true
 apps: true
