enable parsoid (pwiki) ve

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -267,6 +267,7 @@ priyo: true
 prueba: 'es.publictestwiki.com'
 pso2: true
 puzzle: true
+pwiki: 'pwiki.arkcls.com'
 pythia: true
 qwerty: true
 rawdata: true
