Adding Parsoid for VE to raspberry.miraheze.org
Per request T2635

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -270,6 +270,7 @@ puzzle: true
 pwiki: 'pwiki.arkcls.com'
 pythia: true
 qwerty: true
+raspberry: true
 rawdata: true
 raymanspeedrun: true
 revit: true
