enable parsoid (plnonbinary) ve

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -259,6 +259,7 @@ petctviewer: true
 pfsolutions: true
 pgnwiki: true
 plasticssongcontest: true
+plnonbinary: true
 podpedia: true
 politics: true
 pq: true
