enable parsoid (jeongi) ve

--- a/parsoid.yaml
+++ b/parsoid.yaml
@@ -163,6 +163,7 @@ izanagi: true
 janesskillspack: true
 jayuwiki: true
 jcs: 'wiki.gesamtschule-nordkirchen.de'
+jeongi: true
 justinbieber: true
 kai: true
 karmazynxyz: true
